components/Home/home.module.css
/* ... */
  .polaris_blk2_sub1_wrp p{font-size: 20px;line-height: 26px;font-weight: 500;color: #313337;margin-left: 53px;margin-bottom: 20px;position: relative;}

  .polaris_blk2_sub1_wrp p::after{    content: '';
    position: absolute;
    background-image: url(https://all-frontend-assets.s3.amazonaws.com/beto_paredes_nest/join_us_rep/join_as_rep_blue_bullet_point.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    width: 23px;
    height: 24px;
    left: -31px;
    top: 0px;}
  .polaris_blk2_sub2_wrp{background-image: url(https://all-frontend-assets.s3.amazonaws.com/polaris_project/home/polaris_home_block2_sec2_bg.webp);
    background-repeat: no-repeat;background-position: center;background-size: cover;padding: 25px 97px;border-radius: 15px;border: 2px solid #000;display: flex;justify-content: space-between;
    align-items: center;} 
  .polaris_blk2_sub2_left_wrp{width: 25%;}  
  .polaris_blk2_sub2_left_wrp img{display: block;width: 100%;}
  .polaris_blk2_sub2_right_wrp{width: 70%;}
  .polaris_blk2_sub2_right_wrp h1{font-size: 38px;line-height: 44px;font-weight: 900;color: #fff;text-transform: uppercase;margin-bottom: 20px;    text-shadow: 0 2px 10px rgba(0,0,0,.4);}
  .polaris_blk2_sub2_right_wrp h1 span{background: linear-gradient(180deg, rgba(255,246,0,1) 0%, rgba(216,255,0,1) 100%);    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;}
  .polaris_blk2_sub2_right_wrp p{font-size: 25px;line-height: 32px;font-weight: 600;color: #fff;    text-shadow: 0 2px 10px rgba(0,0,0,.4);}

  /* ----------------------------------------block3------------------------------------------------ */

  .polaris_blk3_main_wrp{background-image: url(https://all-frontend-assets.s3.amazonaws.com/polaris_project/home/polaris_block4_new_bg.webp);
    background-repeat: no-repeat;background-position: center;background-size: cover;padding: 40px 0;}
  .polaris_blk3_sub_wrp h1{font-size: 50px;line-height: 56px;font-weight: 900;text-transform: uppercase;text-align: center;color: #07286d;margin-bottom: 20px;} 
  .polaris_blk3_sub_wrp img{display: block;width: 100%;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;margin-bottom: 30px;} 
  .polaris_blk3_sub_sec_wrp{display: flex;flex-wrap: wrap;}
  .polaris_blk3_sub_sec_mini_wrp{width: 25%;padding: 20px;display: flex;justify-content: space-between;    align-items: center;}
  .polaris_blk3_logo_wrp{width: 30%;}
  .polaris_blk3_logo_sec_wrp{display: flex;justify-content: center;align-items: center;background-color: #fff;width: 100px;height: 100px;border-radius: 50%;padding: 20px;}
  .polaris_blk3_sub_sec_mini1_wrp{background-color: #303680;border-right: 1px solid #fff;}
  .polaris_blk3_sub_sec_mini2_wrp{background-color: #13b418;border-right: 1px solid #fff;}
  .polaris_blk3_sub_sec_mini3_wrp{background-color: #f2c91f;border-right: 1px solid #fff;}
  .polaris_blk3_sub_sec_mini4_wrp{background-color: #f07d60;}
  .polaris_blk3_logo_sec_wrp img{display: block;width: 100%;margin-bottom: 0;box-shadow:none}
  .polaris_blk3_text_wrp{width: 67%;}
  .polaris_blk3_text_wrp p{font-size: 30px;line-height: 36px;font-weight: 700;color: #fff;}
  .polaris_blk3_1sub_wrp{background-color: #fff;padding: 20px;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;margin-bottom: 20px;display: flex;justify-content: center;
    align-items: start;}
  .polaris_blk3_evn_od{width: 33%;display: flex;flex-direction: column;border-right: 3px solid #d4d4d9;}
  .polaris_blk3_evn_od:last-child{border-right: none;}
  .polaris_blk3_evn_od_heading{background-color: #ededef;padding:20px 10px;border-radius: 10px 0px 0 10px;justify-content: center;align-items: center;}
  .polaris_blk3_evn_od:nth-child(2) .polaris_blk3_evn_od_heading{border-radius: unset;}
  .polaris_blk3_evn_od:nth-child(3) .polaris_blk3_evn_od_heading{border-radius: 0px 10px 10px 0px;}
  .polaris_blk3_evn_od_heading h1{font-size: 23px;line-height: 32px;font-weight: 500;color: #000;text-align: center;margin-bottom: 0;}
  .polaris_blk3_evn_od_heading_white{background-color: #ffffff;padding:20px 20px;border-radius: 10px;display: flex;justify-content: left;
    align-items: center;
    padding-left: 151px;}
  .polaris_blk3_evn_od_heading_white p{font-size: 20px;line-height: 26px;font-weight: 400;color: #34383d;position: relative;margin-left: 25px;}
  .polaris_blk3_evn_od_heading_white p::after{    content: '';
    position: absolute;
    background-image: url(https://all-frontend-assets.s3.amazonaws.com/polaris_project/home/green_bullet_point.png);
    background-repeat: no-repeat;
    width: 23px;
    height: 24px;
    left: -31px;
    top: 0px;}
    .polaris_blk3_evn_od_heading_gray{background-color: #f7f7f7;padding:20px 20px;border-radius: 10px;display: flex;justify-content: left;
      align-items: center;
      padding-left: 151px;}
    .polaris_blk3_evn_od_heading_gray p{font-size: 20px;line-height: 26px;font-weight: 400;color: #34383d;position: relative;margin-left: 25px;}
    .polaris_blk3_evn_od_heading_gray p::after{    content: '';
      position: absolute;
      background-image: url(https://all-frontend-assets.s3.amazonaws.com/polaris_project/home/green_bullet_point.png);
      background-repeat: no-repeat;
      width: 23px;
      height: 24px;
      left: -31px;
      top: 0px;}


  /* -------------------------------------------------block4----------------------------------------------- */
.polaris_blk4_main_wrp{
  
  background-image: url(https://all-frontend-assets.s3.amazonaws.com/polaris_project/home/polaris_block4_new_bg.webp);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  padding: 40px 0;    padding-bottom: 0;}
/* ... */

